--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,12 +11,17 @@
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
   </head>
+
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog">Blog</a>
 
-    <h1>Homepage</h1>
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
+    <h1>My Astro Site</h1>
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
 
     <p>
       I am working through Astro's introductory tutorial. This is the second
